--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "pg": "^8.8.0"
+    "mssql": "^9.0.1",
+    "nodemon": "^2.0.20"
   }
 }
